# hackathon-flex-back-bitrix

./: .env  .env.example  .gitignore  all_tools.txt  anonymizer.py  bitrix_openlines.py  bridge.py  contacts.db  db.py  get_session.py  pyproject.toml  railway.toml
.claude/: settings.local.json
phone_recording/: __init__.py  config.py  debug_chat.py  generate_session.py  list_dialogs.py  main.py  models.py  openrouter_client.py  storage.py  telegram_client.py  telegram_client_clean.py  transcription.py
